<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/ic_nav_transactions"
        android:title="@string/title_transactions"/>

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/ic_nav_scan"
        android:title="@string/title_scan"/>

    <item
        android:id="@+id/navigation_graph"
        android:icon="@drawable/ic_nav_graph"
        android:title="@string/title_graph"/>

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/title_settings"/>
</menu>