<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/rounded_item_transaction">

    <TextView
        android:id="@+id/tvTransaksi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/syne_bold"
        android:text="@string/app_name"
        android:textColor="@color/neon_yellow"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/price"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_below="@+id/tvTransaksi"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/total"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/qty"
        android:layout_width="71dp"
        android:layout_height="30dp"
        android:layout_below="@+id/price"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/qty"
        android:textColor="@color/white" />

</RelativeLayout>
