<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/rounded_item_transaction">

    <TextView
        android:id="@+id/tvTransactionDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="dd/mm/yyyy"
        android:layout_marginTop="35dp"
        android:textColor="@color/white" />

    <ImageButton
        android:id="@+id/btnDelete"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="end|center_vertical"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_trash" />

    <TextView
        android:id="@+id/tvKategori"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:text="@string/kategori"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvTransaksi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/syne_bold"
        android:text="@string/app_name"
        android:textColor="@color/neon_yellow"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nominal"
        android:paddingVertical="10dp"
        android:layout_below="@+id/btnDelete"
        android:paddingHorizontal="20dp"
        android:layout_alignParentEnd="true"
        android:textSize="15sp"
        android:background="@drawable/rounded_rectangle"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/locationSymbol"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_map_marker"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/price"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/Location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/locationSymbol"
        android:layout_marginRight="10dp"
        android:layout_toStartOf="@+id/locationSymbol"
        android:text="@string/location_name"
        android:textColor="@color/white" />

</RelativeLayout>
